src/componets/Cards/Cards.css
.cardsContainer {
    margin-top: -5vh;
    display: flex;
    justify-content: space-around;                                                                                                                                                          
}

.covidInfoContainer {
    width: 25vw;
}

.card {
    width: 30vw;
    height: 30vh;
    background-color: rgb(241, 241, 241);
    border-radius: 10px;
    box-shadow: 1px 1px 30px rgb(68, 66, 66);
    overflow: hidden;
}

.selectRegion {
    display: flex;
    justify-content: space-around;
    margin-top: 2vh;
}

.numberOfCases {
    text-align: center;
}

.infoAboutCases {
    margin-top: 30px;
    text-align: center;
}

.newsContainer li {
    margin: 5px;    
}

.contact {
    text-align: center;
}

.reviewContainer {
    background-color: rgb(8, 8, 109);
    color: white;
}

.reviewContainer h1, p{
    text-align: center;
    margin-top: 20px
}

.highlight {
    color: rgb(6, 214, 6);
}

.selectRegion {
    display: flex;
    justify-content: space-around;
    align-items: center;
}

.confirmedCasesTitle {
    height: 5vh;
    display: flex;
    justify-content: center;
    align-items: center;
}

.numberOfCases {
    height: 15vh;
    display: flex;
    justify-content: center;
    align-items: center;
}

.numberOfNews {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 20px;
    height: 15vh;
    overflow: scroll;
}

.numberOfNews ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    margin-bottom: 20px;
  }


.numberOfInfecteds {
    font-size: 5vh;
}

.newsContainer {
    border: 1px solid black;
}

.reviewText {
    height: 15vh;
}

@media (max-width: 833px){
    .cardsContainer {
        flex-direction: column;
        align-items: center;
        height: 100vh;
        
    }
    .card {
        margin-top: 20px;
        height: 50vh !important;
        width: 50vw;
        min-width: 337px !important;
    }
}

